@@ -5,6 +5,9 @@ Changelog
 4.0.8 (unreleased)
 ------------------
 
+- XlsSource: Handle values that are already a valid term for vocabulary fields.
+  [lgraf]
+
 - XlsSource: Raise KeyError if a value can't be found in the translation mapping
   for fields with a vocabulary, instead of just setting the translated value anyway.
   [lgraf] 
